--- a/index.html
+++ b/index.html
@@ -9,21 +9,15 @@
 </head>
 
 <body>
-    <h1>Top of Root</h1>
+    <!-- <h1>Top of Root</h1> -->
     <div id="root">
-    <h1> Hi I am sanket</h1>    
+    <!-- <h1> Hi I am sanket</h1>     -->
     </div>
-    <h1>Below Root</h1>
+    <!-- <h1>Below Root</h1> -->
     <!-- <h1>Hello World</h1> -->
-    <script crossorigin
-     src="https://unpkg.com/react@18/umd/react.development.js">
-    </script>
-    <script crossorigin
-     src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
-    </script>
 
      <!-- React is working only inside div (id = "root") as everything is rendered as root.render inside upmost div -->
-    <script src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 
 </body>
 </html>
